--- a/bottomNavBar/app/src/main/res/layout/activity_raspisanye.xml
+++ b/bottomNavBar/app/src/main/res/layout/activity_raspisanye.xml
@@ -17,6 +17,7 @@
         android:background="@drawable/filler" />
 
     <ImageButton
+        android:id="@+id/filler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -77,101 +78,107 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
     <Button
-        android:id="@+id/ponedelnik"
+        android:id="@+id/monday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Понедельник"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
+        android:shadowRadius="30"
         android:onClick="mon"
         app:layout_constraintTop_toBottomOf="@+id/jurnal_text"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="7dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     <Button
-        android:id="@+id/vtornik"
+        android:id="@+id/tusday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Вторник"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
-        app:layout_constraintTop_toBottomOf="@+id/ponedelnik"
+        android:shadowRadius="30"
+        android:onClick="tue"
+        app:layout_constraintTop_toBottomOf="@+id/monday"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     <Button
-        android:id="@+id/sreda"
+        android:id="@+id/wensday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Среда"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
-        app:layout_constraintTop_toBottomOf="@+id/vtornik"
+        android:shadowRadius="30"
+        android:onClick="wen"
+        app:layout_constraintTop_toBottomOf="@+id/tusday"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     <Button
-        android:id="@+id/cheyverg"
+        android:id="@+id/thursday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Четверг"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
-        app:layout_constraintTop_toBottomOf="@+id/sreda"
+        android:shadowRadius="30"
+        android:onClick="thu"
+        app:layout_constraintTop_toBottomOf="@+id/wensday"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     <Button
-        android:id="@+id/pytnicha"
+        android:id="@+id/friday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Пятница"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
-        app:layout_constraintTop_toBottomOf="@+id/cheyverg"
+        android:shadowRadius="30"
+        android:onClick="fri"
+        app:layout_constraintTop_toBottomOf="@+id/thursday"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     <Button
-        android:id="@+id/subbota"
+        android:id="@+id/saturday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Суббота"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
-        app:layout_constraintTop_toBottomOf="@+id/pytnicha"
+        android:shadowRadius="30"
+        android:onClick="sat"
+        app:layout_constraintTop_toBottomOf="@+id/friday"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
     <Button
-        android:id="@+id/voskresene"
+        android:id="@+id/sunday"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Воскресенье"
-        android:textSize="30dp"
+        android:textSize="20dp"
         android:background="@color/transpanent"
         android:textColor="@color/black"
         android:shadowColor="@color/black"
-        android:shadowRadius="3"
-        app:layout_constraintTop_toBottomOf="@+id/subbota"
+        android:shadowRadius="30"
+        android:onClick="sun"
+        app:layout_constraintTop_toBottomOf="@+id/saturday"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
