--- a/bottomNavBar/app/src/main/res/layout/activity_journal.xml
+++ b/bottomNavBar/app/src/main/res/layout/activity_journal.xml
@@ -109,6 +109,11 @@
                 app:layout_constraintTop_toBottomOf="@+id/jurnal_text" />
 
             <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sel"/>
+
+            <TextView
                 android:id="@+id/date"
                 android:layout_width="222dp"
                 android:gravity="right"
